# sentinel-cloud-native

./: .gitignore  README.md  Sentinel_Diagrams.docx  Sentinel_Diagrams.md  Sentinel_MCA_Major_Project_Report.docx  Sentinel_MCA_Major_Project_Report.md  main.py
sentinel/: .env.example  README.md  docker-compose.yml
sentinel-backend/: .env.example  LiveDataGenerator.spec  SentinelBackend.spec  analytics_service.py  connection_manager.py  database.py  generate_data.py  generate_live_data.py  main.py  models.py  package.json  requirements.txt  run_backend.py  run_live_generator.py  sample_message_generator.py  utils.py
sentinel-desktop/: README.md  build-all.bat  main.js  package-lock.json  package.json  preload.js  start-demo.bat
sentinel-desktop/app/frontend-dist/: index.html
sentinel-desktop/config/: demo.env.example
sentinel-desktop/docker/: docker-compose.mongo.yml
sentinel-desktop/scripts/: build-backend.bat  build-generator.bat  prepare-build.mjs  start-backend.bat  start-generator.bat
sentinel/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
sentinel/frontend/src/: App.jsx  main.jsx  store.js  styles.css
sentinel/services/analytics-service/: Dockerfile  (+1 more)
sentinel/services/common/python_common/: pyproject.toml
sentinel/services/common/python_common/sentinel_common/: __init__.py  config.py  retry.py  schemas.py  topics.py
sentinel/services/common/python_common/sentinel_common/consumers/: __init__.py  kafka.py
sentinel/services/common/python_common/sentinel_common/producers/: __init__.py  kafka.py
(+99 files in other folders)
