[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-common"
version = "0.1.0"
description = "Shared Python contracts and infrastructure helpers for Sentinel services"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]

